# rllte

./: .coveragerc  .gitignore  .gitmodules  404.html  =5.0  ACKNOWLEDGMENT.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  _vizdoom.ini  conda_env.yaml  doorkey_5.sh  doorkey_baseline_rq2.sh  doorkey_rq3.sh  doorkey_update_prop.sh  example_evaluation.ipynb  generate_mkgendocs.py  index.html  mario_updateProp.sh  mkdocs.yml  mkgendocs.yml  multiroom_n2_s4.sh  pyproject.toml  requirements.txt  sitemap.xml  start_all_experiments.sh  start_all_training.sh  test.py  train.py  train_atari.sh  train_long  train_minigrid.sh  train_vizdoom.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
README-zh-Hans/: index.html
api/: index.html
api_docs/: index.html
api_docs/contributing/: index.html
api_old/: index.html
benchmarks/: index.html
cfgs/: config.yaml  cont_task_config.yaml  discrete_task_config.yaml  drqv2_dmc_config.yaml  full_config.yaml  minimum_config.yaml  ppg_procgen_config.yaml  ppo_procgen_config.yaml  sac_dmc_config.yaml
cfgs/task/: drqv2_dmc_config.yaml  impala_atari_config.yaml  impala_minigrid_config.yaml  ppg_dmc_state_config.yaml  ppg_procgen_config.yaml  ppo_atari_config.yaml  ppo_dmc_state_config.yaml  ppo_procgen_config.yaml  sac_dmc_config.yaml  sac_dmc_pixel_config.yaml  sac_dmc_state_config.yaml
changelog/: index.html
contributing/: index.html
copilot/: index.html
deployment/: README.md
deployment/ascend/: sample_build.sh  sample_run.sh
deployment/c++/: CMakeLists.txt  DeployerTest.cpp  HsuanwuDeployer.cpp  HsuanwuDeployer.h  HsuanwuDeployer_test.cpp  README.md  RLLTEDeployer.cpp  RLLTEDeployer.h
deployment/c++/common/: BatchStream.h  common.h  half.h  sampleConfig.h  sampleEngines.cpp  sampleInference.cpp  sampleOptions.cpp  sampleOptions.h  sampleReporting.cpp  sampleUtils.cpp
deployment/ncnn/: CMakeLists.txt  NCNNDeployeTest.cpp
deployment/ncnn/include/ncnn/: layer_shader_type_enum.h  layer_type_enum.h  platform.h
deployment/ncnn/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslang-default-resource-limitsTargets.cmake  glslangTargets.cmake
deployment/ncnn/lib/cmake/glslang/: glslang-config-version.cmake  glslang-config.cmake  glslang-targets-release.cmake  glslang-targets.cmake
deployment/ncnn/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
deployment/ncnn/lib/pkgconfig/: ncnn.pc
deployment/ncnn/tools/: onnx2ncnn
deployment/python/: infer.py  onnx2trt.sh  pth2onnx.py  trtexec
docs/: CNAME  README-zh-Hans.md  README.md  api.md  api_old.md  benchmarks.md  changelog.md  contributing.md  copilot.md  generate_mkgendocs.py  generate_yaml.ipynb  getting_started.md  hub.md  index.md  mkgendocs.yml  trigger.yml  verification.md
docs/api/: contributing.md  index.md
docs/api_docs/: contributing.md  index.md
docs/overrides/: home.html
docs/overview/: api.md  api_overview.md
docs/sources/: index.md
docs/tutorials/: configuration.md  custom_environment.md  data_augmentation.md  deployment.md  evaluation.md  index.md  module_replacement.md  overview.md  pre-training.md  quick_start.md
examples/: custom_environment.ipynb  custom_module.ipynb  example_drqv2_dmc.py  example_impala_atari.py  example_ppg_dmc_state.py  example_ppg_procgen.py  example_ppo_atari.py  example_ppo_dmc_state.py  example_ppo_procgen.py  example_sac_dmc.py  example_sac_dmc_pixel.py  example_sac_dmc_state.py  fast_algorithm_dev.ipynb  intrinsic_reward_shaping.ipynb  model_evaluation.ipynb  module_replacement.ipynb  observation_augmentation.ipynb  pretraining.ipynb  quick_start.ipynb  train_ppoLstm_atari.ipynb
examples/rlexplore/: 0 quick_start.ipynb  1 rlexplore_with_rllte.ipynb  2 rlexplore_with_sb3.ipynb  3 rlexplore_with_cleanrl.py  4 mixed_intrinsic_rewards.ipynb  5 custom_intrinsic_reward.ipynb
experimental/: base_reward.py  disagreement.py  e3b.py  fabric.py  figure.ipynb  for snappify.py  icm.py  mario_figures.ipynb  mixed.py  model.py  ngu.py  paper_figures_mario.ipynb  procgen_figures.ipynb  pseudo_counts.py  re3.py  revd.py  rf.py  ride.py  rise.py  rllte_to_cleanrl.py  rllte_to_sb3.py  rnd.py  schedule.ipynb  screenshots.ipynb  test.ipynb  test.py  test_pc.py  train_cleanrl_int.py  train_cleanrl_ppo.py  train_cleanrl_sh.py  train_cleanrl_th.py  train_ppo.py
experimental/data/: check.ipynb
experimental/figures/: ant.ipynb  atari.ipynb  best.ipynb  q1.ipynb  q2.ipynb  q3.ipynb  q4.ipynb  q5.ipynb  q6.ipynb  q7.ipynb  q8.ipynb  rlexplore_off_policy.py  rlexplore_on_policy.py  snappify.py  utils.py
getting_started/: index.html
hsuanwu/: verification.py
hsuanwu/common/: __init__.py  base_encoder.py  base_storage.py  distributed_agent.py  logger.py  off_policy_agent.py  on_policy_agent.py  timer.py  train_state.py  typing.py  utils.py
hsuanwu/env/: __init__.py  utils.py
hsuanwu/envs/: __init__.py
hsuanwu/evaluation/: __init__ .py  __init__.py  comparison.py  loader.py  method.py  metrics.py  performance.py  utils.py
hsuanwu/experimental/: npu_ppo.py
hsuanwu/xploit/: encoders.py  replay_buffer.py  utils.py
hub/: index.html
license/: index.html
logs/: tmp.npz
plots/: plot_returns.ipynb
rllte/: __init__.py  verification.py
rllte/agent/: __init__.py  daac.py  drac.py  drdaac.py  drqv2.py  impala.py  ppg.py  ppo.py  rainbow.py  (+5 more)
scripts/: apply_lora.sh  copilot.sh  generate_conversation.sh  run_tests.sh
search/: search_index.json
site/: 404.html  CNAME  index.html  sitemap.xml  trigger.yml
src/: mixed.py  plot.ipynb  plot_atari.ipynb  plot_loss.ipynb  ppo.py  sac_cleanrl.py  train_mixed.py  train_ppo.py  train_ppo_lstm.py  utils.py
tests/: test_aug.py  test_dist.py  test_drqv2.py  test_encoder.py  test_env.py  test_eval.py  test_logger.py  test_mp.py  test_nstep_replay_buffer.py  test_ppo_atari.py  test_reward.py  test_storage.py  test_torch.py  test_wandb.py
tutorials/: index.html
verification/: index.html
wandb/: latest-run
(+936 files in other folders)
