[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["rllte"]

[project]
name = "rllte-core"
version = "0.0.1.beta07"
authors = [
  { name="Reinforcement Learning Evolution Foundation", email="friedrichyuan19990827@gmail.com" },
]
description = "Long-Term Evolution Project of Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Reinforcement Learning", "Algorithm", "Evolution", "Baseline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "gymnasium[accept-rom-license]",
  "torch",
  "torchvision",
  "termcolor",
  "scipy>= 1.7.0",
  "arch==5.3.1",
  "pynvml==11.5.0",
  "matplotlib==3.6.0",
  "seaborn==0.12.2",
  "huggingface_hub==0.14.1"
]

[project.optional-dependencies]
tests = [
  "build",
  "pytest",
  "pytest-cov",
  "pytest-env",
  "pytest-xdist",
  "pytype",
  "ruff",
  "isort>=5.0",
  "black"
]
envs = [
  "envpool",
  "ale-py==0.8.1",
  "gymnasium[accept-rom-license, other]",
  "dm-control",
  "procgen",
  "minigrid",
  "gym-super-mario-bros==7.4.0" 
]
docs = [
  "mkdocs-material",
  "mkgendocs"
]

[project.urls]
"Code" = "https://github.com/RLE-Foundation/rllte"
"Documentation" = "https://docs.rllte.dev/"
"Benchmark" = "https://hub.rllte.dev/"
"Bug Tracker" = "https://github.com/RLE-Foundation/rllte/issues"

[tool.ruff]
# Same as Black.
line-length = 127
# Assume Python 3.7
target-version = "py38"
# See https://beta.ruff.rs/docs/rules/
select = ["E", "F", "B", "UP", "C90", "RUF"]
# Ignore explicit stacklevel`
ignore = ["B028", "B008"]

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127
src_paths = ["rllte"]

[tool.pytype]
inputs = ["rllte"]
disable = ["pyi-error"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
exclude = ["rllte/env", 
"rllte/evaluation/visualization.py"
]
# disable_error_code = ["union-attr", "operator", "arg-type", "assignment"]